--- a/doku/spec/spec03-requirements.tex
+++ b/doku/spec/spec03-requirements.tex
@@ -262,9 +262,7 @@ Die Dateistruktur wird bereits vom Crawlvorgang vorgegeben, wird hier aber nochm
 	macht gleichzeitig einen Zugriff über das Netzwerk möglich.
 \begin{description}
 	\item [\req{Konfiguration}{conf}]
-		Es ist Port des Servers in einer Config-Datei zu hinterlegen.
-	\item [\req{Addresse}{conf}]
-		Die URL des Servers ist bei der Initialisierung der Clients zu übergeben.
+		Die URL und der Port des Servers ist bei der Initialisierung der Clients im Konstruktor zu übergeben.
 	\item [\req{Client-API}{api}]
 		Für Benutzer des Clients wird eine Programmierschnittstelle in Java zur Verfügung gestellt.
 		Die API umfasst dabei folgende Schnittstellen:
