--- a/doku/design/backend/backend.tex
+++ b/doku/design/backend/backend.tex
@@ -30,13 +30,37 @@ if __name__ == '__main__'
 \section{Werkzeuge}
 TODO
 
+\newpage
+\section{Programmablauf} 
+\label{sec:programmablauf}
+\begin{figure}[h]
+	\centering
+	\label{dia:design:backend:overview}
+	\includegraphics[width=\textwidth]{design/data/backend_procedure.eps}
+	\caption{Ablaufprozedur Backend}
+\end{figure}
+
+
+% section programmablauf (end)
 
 \section{Zentrale Module} 
 \label{sec:zentrale_module}
 
 \subsection{ConfigHandler}
 \label{sub:confighandler}
+\paragraph{Ablauf:}
+\label{par:ablauf_}
+Grundlegender Ablauf beim Lesen von Configwerten:
+\begin{figure}[h]
+	\centering
+	\label{dia:design:backend:overview}
+	\includegraphics[width=\textwidth]{design/data/getting_value.eps}
+	\caption{Werte aus der Konfigurationsdatei holen}
+\end{figure}
 
+
+
+% paragraph ablauf_ (end)
 \paragraph{Beschreibung:}
 \label{par:beschreibung_}
 Dieser wird zum Lesen und Setzen der Konfigurationswerte verwendet. Die Konfigurationsdatei ist in 
@@ -153,10 +177,22 @@ class CrawlManager:
 
 \end{lstlisting}
 
-
+\newpage
 % paragraph api_ (end)
 \subsection{Crawljob}
 \label{sub:crawljob}
+\paragraph{Ablauf:}
+\label{par:ablauf_}
+\begin{figure}[h]
+	\centering
+	\label{dia:design:backend:overview}
+	\includegraphics[width=\textwidth]{design/data/crawljob.eps}
+	\caption{CrawlJob Prozedur}
+\end{figure}
+
+
+% paragraph ablauf_ (end)
+
 \paragraph{Beschreibung:}
 \label{par:beschreibung_}
 Der Crawljob ist ein autonomer Thread der die unten aufgelisteten Submodule beeinhaltet.
