--- a/doku/design/backend/backend.tex
+++ b/doku/design/backend/backend.tex
@@ -337,8 +337,22 @@ class Cleaner():
 \label{ssub:filtersystem}
 \paragraph{Beschreibung:}
 \label{par:beschreibung_}
-Das Filtersystem entscheidet aufgrund eines übergebenen Metadaten-Dictionaries ob eine Datei behalten wird. Exemplarisch wird ein HTML-Filter
-implementiert. Die Filter werden jeweils in einem Subintepreter gestartet, wobei die Metadaten im Subintepreter global vorhanden sind.
+\begin{description}
+  \item[Initialisierung] Bei jedem Cleanup-Vorgang werden alle .py files
+    aus dem konfigurierte Filter-Verzeichnis in eine Liste eingelesen
+  \item[Filtervorgang] Für jede reguläre Datei wird die Liste mit dem
+    Filtern durchlaufen. Die einzelnen .py files werden in einem
+    Subinterpreter gestartet, und ihnen wird eine Kopie des
+    Metadaten-Dictionaries des entsprechenden Files mitgegeben
+    \texttt{filter\_input}.
+  \item[Auswertung] Jeder Filter bekommt zudem eine Boolean-Variable
+    \texttt{filter\_result} übergeben, welche anfangs auf \texttt{True}
+    gesetzt ist. Will der Filter die Datei aussortieren so setzt er sie
+    auf ein unwahren Wahrheitswert. 
+  \item[Aussortierung] Gibt der Filter \texttt{False} zurück, so wird
+    das Metadaten-Dictionary, sowie der zugehörige Ordner gelöscht. 
+    Bei True wird regulär weitergemacht.
+\end{description}
 
 \paragraph{Schnittstelle:}
 \label{par:schnittstelle_}
@@ -365,7 +379,8 @@ Filter werden während des ,,Cleaner'' Vorgangs ausgeführt.
 \paragraph{Beschreibung:}
 \label{par:beschreibung_}
 % paragraph beschreibung_ (end)
-Hierbei werden aus der Metadatenliste Xml-Dateien zum jeweiligen Content geschrieben (data.xml). 
+Hierbei werden aus der Metadatenliste Xml-Dateien zum jeweiligen Content
+geschrieben (\texttt{data.xml}). 
 Beim Xml generieren werden die Metadaten mit dem aktuellen Systemdatum versehen.
 \paragraph{Schnittstelle:}
 \label{par:schnittstelle_}
@@ -417,8 +432,6 @@ class DBGenerator:
         pass
 \end{lstlisting}
 
-
-
 % paragraph schnittstelle_ (end)
 
 \subsubsection{Rsync}
@@ -454,7 +467,8 @@ class Rsync:
 \paragraph{Beschreibung:}
 \label{par:beschreibung_}
 Das Git Modul ist ein Wrapper für das SCM ,,git''. Es wird verwendet um das Archiv mit einer Versionierung auszustatten. Hierzu werden 
-die Dateien ins Archiv per Git hinzugefügt, der Stand wird ,,commited'' und ein CommitTag generiert.
+die Dateien ins Archiv per Git hinzugefügt, der Stand wird ,,commited''
+und der erzeugte Commit wird mit der ,,commitTime'' getaggt.
 
 \paragraph{Schnittstelle:}
 \label{par:schnittstelle_}
@@ -500,8 +514,6 @@ Der Logger wird für das zentrale Loggen im Backend verwendet. Er implementiert 
 \paragraph{Schnittstelle:}
 \label{par:schnittstelle_}
 
-
-
 % paragraph schnittstelle_ (end)
 Folgende Funktionen werden bereitgestellt:
 \begin{lstlisting}[language=python]
@@ -528,25 +540,56 @@ def verbosity(severity):
 
 \section{Database Recovery} 
 \label{sec:database_recovery}
+\ref{req:Db:recovery}
 Das Recovery-Werkzeug traversiert über alle momentan vorhandenen Domains, und laufen durch die
 jeweilige Git-History von hinten nach vorne. Dabei wird aus den XML Metadaten eine neue Datenbank gebildet.
 % section database_recovery (end)
 
 \section{Util} 
 \label{sec:util}
-Das Util Modul stellt verscheidene Funktionen die von mehreren Modulen genutzt werden bereit. Erwähnenswert ist hier der ,,Lockmechanismus''
+Das Util Modul stellt verscheidene Funktionen die von mehreren Modulen genutzt werden bereit.
+Erwähnenswert ist hier der ,,Lockmechanismus''
 auf Dateisystemebene um Daten beim Zugriff auf gemeinsame  Ressourcen zu schützen.
 
 \section{Javadapter} 
 \label{sec:javadapter}
-Der ,,Javadapter'' stellt eine Schnittstelle zwischen Python und Java dar. Er ist als Daemon implementiert der über einen Socket über einen definierten Port
-erreichbar ist. Interagiert werden kann mit dem Adapter über ein Textprotokoll. Der Client (in unserem Fall der Java-Server) kann bestimmte Kommandos
-zeilenweise an den Server schicken, welcher dann mit ,,OK'' oder ,,ACK [Fehler]' antwortet.
-\\
+Der ,,Javadapter'' stellt eine Schnittstelle zwischen Python und Java dar.
+\begin{description}
+  \item [Daemon] Er ist als Daemon implementiert, und ist über einen
+    definierten Hostname und Port erreichbar (Hier: \texttt{localhost:42421})
+  \item [Kommunikation] Jegliche Interaktion erfolgt über ein
+    zeilenbasiertes Textprotokoll. Der Client (Hier: Der Java-Server)
+    sendet definerte Kommandos, welche mit mit einer Antwortzeile
+    und einem abschließenden ,,OK'' oder ,,ACK [FehlerNachricht]''
+    beantwortet werden.
+  \item [Instanziierung] Der Adapter ist als eigenes Python Modul
+    implementiert, und kann über das Commandline-Interface gestartet
+    werden.
+\end{description}
+ 
 Folgende Kommandos sollen dabei implementiert werden:
-\begin{itemize}
-    \item \texttt{lock [domain]}
-        Lockt eine bestimmte Domain mittels einen Lockfiles
-    \item \texttt{unlock [domain]}
-        Löscht ein durch \texttt{lock} erzeugtes Lockfile
-\end{itemize}
+Alle Kommandoes nehmen zusätzliche nicht-optionale Argumente die in
+eckigen Klammern angegeben sind.
+\begin{table}[h]
+  \centering
+  \begin{tabular}{|l|l|p{6cm}|}
+    \hline
+    \textbf{Kommando} & \textbf{Returnwerte} & \textbf{Beschreibung} \\
+    \hline
+    \texttt{lock [domain]} 
+    & True/False 
+    & Lockt eine bestimmte Domain mittels einen Lockfiles 
+    \\
+    \hline
+    \texttt{try\_lock [domain]} 
+    & True/False 
+    & Wie \texttt{lock}, wartet aber nicht wenn lock bereits gesetzt ist 
+    \\
+    \hline
+    \texttt{unlock [domain]} 
+    & True/False 
+    & Löscht ein durch \texttt{lock} erzeugtes Lockfile 
+    \\
+    \hline
+  \end{tabular}
+\end{table}
