--- a/doku/design/backend/backend.tex
+++ b/doku/design/backend/backend.tex
@@ -114,7 +114,7 @@ Angelegt wird der Ordner über %\verbatim{archive init /pfad/zum/archive}
 \paragraph{Schnittstelle:}
 \label{par:schnittstelle}
 \begin{lstlisting}[language=python]
-def init\_archive(path = '.'):
+def init_archive(path = '.'):
     """
     Initializes empty archive structure with default Config
     at ,,path'' with the following structure:
